--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,7 +1,17 @@
 h1 {
-  color:rgb(51, 6, 37);
-  background-color: rgb(248, 211, 236);
-  padding: 5px;
-  border-radius: 5px;
-  width: fit-content;
+  font-size: 25px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+blockquote {
+  border-left: solid #777 2px;
+  margin-left: 12px;
+  padding-left: 12px;
+}
+
+pre, code {
+  font-family: 'Inconsolata', 'Courier New', monospace;
 }
