--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
   font-family: 'Titillium Web', sans-serif;
   font-size: 14px;
   box-sizing: border-box;
+}
+
+body {
   margin: 0;
-  padding: 0;
 }
